--- a/openwhisk/openwhisk.html
+++ b/openwhisk/openwhisk.html
@@ -281,6 +281,7 @@ action; any other type is ignored.</p>
               $('.action-namespace').hide();
               $('.action-edit').hide();
               $('.action-source').hide();
+              node.namespace = "local";
               return;
         }else{
               $('.action-namespace').show();
