Added support for nodejs action containers
similar to java container the assumption is that we already have respective
docker images in the local docker repository with following naming convention:
[action kind]action, e.g. javaaction, nodejsaction, nodejs:6action ... etc.

--- a/openwhisk/openwhisk.html
+++ b/openwhisk/openwhisk.html
@@ -381,7 +381,7 @@ action; any other type is ignored.</p>
             $("#node-input-parameters-container").editableList('addItem', param);
           });
 
-          if(result.exec.kind != "js"){
+          if(result.exec.kind != "nodejs"){
               $("#node-input-edit").hide();
               $('.action-source').hide();
               $(".fa-cog").removeClass("fa-spin");
